--- a/templates/header.html
+++ b/templates/header.html
@@ -45,7 +45,7 @@
        
           <a class="nav-link card-menu text-center" href="{{ url_for('estoque')}}">Posição Estoque</a>
       
-          <a class="nav-link card-menu text-center" href="{{ url_for('posicoes_estoque_omie')}}">Estoque Omie</a>
+          <a class="nav-link card-menu text-center" href="{{ url_for('op_cards')}}">Setor Cobre</a>
       
       
     </div>
