--- a/templates/header.html
+++ b/templates/header.html
@@ -43,7 +43,7 @@
      
           <a class="nav-link card-menu text-center" href="{{ url_for('gerenciar_estoque')}}">Gerenciar Estoque</a>
        
-          <a class="nav-link card-menu text-center" href="{{ url_for('estoque')}}">Posição Estoque</a>
+          <a class="nav-link card-menu text-center" href="{{ url_for('indicadores')}}">Relatórios índices</a>
       
           <a class="nav-link card-menu text-center" href="{{ url_for('op_cards')}}">Setor Cobre</a>
       
