--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
     </section>
     <section class="card shop">
         <div class="icon">
-            <img src="{{ url_for('static', filename='images/dados.svg')}}" alt="Gerenciamento de ops">
+            <img src="{{ url_for('static', filename='images/cobre.svg')}}" alt="Gerenciamento de ops">
         </div>
         <h3>Controle de Cobre</h3>
         <span>Gerenciar Setor de Cobre</span>
