--- a/templates/Ferramentas.html
+++ b/templates/Ferramentas.html
@@ -27,8 +27,8 @@
 
 <div class="w-100" style="padding-top: 0px !important;">
     <div class="w-100"> 
-        <a href="{{url_for('op_cards')}}" type="button" class="btn btn-success ms-2">Voltar</a>
-        <button type="button" class="btn btn-primary ms-1 d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#addFerramentaModal">Adicionar Ferramenta</button>
+        <a href="{{url_for('op_cards')}}" type="button" class="btn btn-success ms-2">Voltar</a>  
+        <button type="button" class="btn btn-info ms-1 d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#addFerramentaModal">Adicionar Ferramenta</button>
 
         <h2 class="d-flex justify-content-center mt-2"><strong>Ferramentas</strong></h2>
 
