--- a/templates/Estoque_Cobre.html
+++ b/templates/Estoque_Cobre.html
@@ -80,7 +80,7 @@
                         <td>{{row.quantidade / 1000}}</td>
                         <td>KG</td>
                         <td>
-                            <button class="btn btn-danger btn-sm" onclick="confirmDelete({{row.id}})">Excluir</button>
+                            <button class="btn btn-danger btn-sm" onclick="confirmDelete('{{row.id}}')">Excluir</button>
                         </td>
                     </tr>
                 {% endfor %}
