--- a/templates/op_cards.html
+++ b/templates/op_cards.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -29,6 +30,9 @@
     }
     .containerModal {
         min-width: 250px;
+    }
+    .containerModal2 {
+        min-width: 200px;
     }
     .column {
         width: 22%;
@@ -90,8 +94,14 @@
         font-weight: bold;
     }
     .readonly-input {
-        background-color: #e9e9e9; /* Cinza claro */
+        background-color: #d1cfcf; /* Cinza claro */
         color: #666; /* Texto em cinza escuro */
+        width: 80px;
+        height: 10px;
+    }
+    .read-input {
+        background-color: #ffffff; /* Cinza claro */
+        width: 80px;    
     }
     .modal {
         display: none;
@@ -102,7 +112,7 @@
         text-align: left;
         top: 0;
         width: 100%;
-        height: 100%;
+        height: 60%;
         overflow: auto;
         background-color: rgba(0, 0, 0, 0.4);
     }
@@ -113,6 +123,16 @@
         border: 1px solid #888;
         width: 50%;
         border-radius: 8px;
+        height: 75%; /* Ajuste a altura do modal de faturamento */
+    }
+    .modal-content2 {
+        background-color: #eeeded;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 50%;
+        border-radius: 8px;
+        height: 75%; /* Ajuste a altura do modal de faturamento */
     }
     .close {
         color: #f00505;
@@ -173,6 +193,22 @@
     .usuario {
         font-size: 18px;
     }
+    .modal-buttons button {
+        padding: 8px 15px;
+        border: none;
+        border-radius: 25px;
+        margin-right: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+    .modal-buttons button:hover {
+        background-color: #ddd;
+    }
+    .modal-aligned {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 </style>
 </head>
 <body>
@@ -216,7 +252,7 @@
             {% for pedido in pedidos %}
             {% if pedido.Status == 'Emitido' %}
 
-            <div class="card" data-pedido-id="{{ pedido.id }}" ondblclick="showDetails('{{ pedido.data_entrega }}', '{{ pedido.dimensional }}',
+            <div class="card" data-pedido-id="{{ pedido.id }}" data-estoque="{{ pedido.estoque }}" data-quantidade="{{ pedido.quantidade }}" ondblclick="showDetails('{{ pedido.data_entrega }}', '{{ pedido.dimensional }}',
             '{{ pedido.descricao }}', '{{ pedido.cliente }}', '{{ pedido.quantidade }}', '{{ pedido.codigo }}',
             '{{ pedido.pedido }}', '{{ pedido.Status }}', '{{ pedido.obs_entrega }}', '{{ pedido.peso }}', '{{ pedido.peso_total }}', '{{ pedido.material }}',
              '{{ pedido.peso_material }}', '{{ pedido.amarrados }}', '{{ pedido.dimencional_real }}',
@@ -228,9 +264,9 @@
             <hr/>  
             Med.:{{ pedido.dimensional }} | {{pedido.canto}}
             <hr/>
-            {% if pedido.estoque >= pedido.quantidade %}
-                <span class="status-estoque">Status: Pedido em Estoque</span>
-            {% else %}
+            {% if pedido.estoque >= pedido.quantidade %} 
+                <span class="status-estoque">Status: Pedido em Estoque</span> 
+            {% else %} 
             <p style="color: red; background-color: #ccc;">
                 <span>Status: Precisa Produzir {{pedido.quantidade - pedido.estoque}}kg</span></p>
                 
@@ -252,7 +288,7 @@
             {% for pedido in pedidos %}
             {% if pedido.Status == 'Produzindo' %}
 
-            <div class="card" data-pedido-id="{{ pedido.id }}" ondblclick="showDetails('{{ pedido.data_entrega }}', '{{ pedido.dimensional }}',
+            <div class="card" data-pedido-id="{{ pedido.id }}" data-estoque="{{ pedido.estoque }}" data-quantidade="{{ pedido.quantidade }}" ondblclick="showDetails('{{ pedido.data_entrega }}', '{{ pedido.dimensional }}',
            '{{ pedido.descricao }}', '{{ pedido.cliente }}', '{{ pedido.quantidade }}', '{{ pedido.codigo }}',
             '{{ pedido.pedido }}', '{{ pedido.Status }}','{{ pedido.obs_entrega }}', '{{ pedido.peso }}', '{{ pedido.peso_total }}', '{{ pedido.material }}',
              '{{ pedido.peso_material }}', '{{ pedido.amarrados }}', '{{ pedido.dimencional_real }}',
@@ -264,10 +300,10 @@
             <hr/> 
             Med.:{{ pedido.dimensional }} | {{pedido.canto}}
             <hr/>
-            {% if pedido.estoque >= pedido.quantidade %}
-                <span class="status-estoque">Status: já em Estoque, A quantidade precisa ser ajustada no almoxarifado</span>
-            {% else %}
-                <span>Status: Produzindo</span>
+            {% if pedido.estoque >= pedido.quantidade %} 
+                <span class="status-estoque">Status: já em Estoque, A quantidade precisa ser ajustada no almoxarifado</span> 
+            {% else %} 
+                <span>Status: Produzindo</span> 
             {% endif %}
             <hr/>
             <div class="container">
@@ -296,13 +332,17 @@
             </div>
             
             <!-- Adicione outros campos da mesma forma --><b>
-                <button class="edit-btn" style="background-color: #fcae90; border-radius: 5px;">Produzir ou Editar Produção ></button>
-                <button class="save-btn" style="display:none; background-color: #9aacff; border-radius: 5px;">Salvar/Produzir</button>
-                <button class="save-ccl" style="display:none; background-color: #f84444; border-radius: 5px;">Cancelar Alteração</button>
+                <div class="modal-buttons">
+            
+                <button class="edit-btn" style="background-color: #f78254; border-radius: 5px;">Produzir ou Editar Produção ></button>
+                <p>
+                <button class="save-btn" style="display:none; background-color: #4059e6; border-radius: 5px;"> Produzir / Salvar</button>
+                <button class="save-ccl" style="display:none; background-color: #f84444; border-radius: 5px;"> Cancelar </button>
+                </div>
             </b>
             </div>
             {% endif %}
-            
+
             {% endfor %}
     </div>
     </div>
@@ -317,7 +357,7 @@
                 Código | Data Ent | Estoque<br></b><hr/> 
             {% for pedido in pedidos %}
             {% if pedido.Status == 'Qualidade' %}
-            <div class="card" data-pedido-id="{{ pedido.id }}" ondblclick="showDetails('{{ pedido.data_entrega }}', '{{ pedido.dimensional }}',
+            <div class="card" data-pedido-id="{{ pedido.id }}" data-estoque="{{ pedido.estoque }}" data-quantidade="{{ pedido.quantidade }}" ondblclick="showDetails('{{ pedido.data_entrega }}', '{{ pedido.dimensional }}',
             '{{ pedido.descricao }}', '{{ pedido.cliente }}', '{{ pedido.quantidade }}', '{{ pedido.codigo }}',
             '{{ pedido.pedido }}', '{{ pedido.Status }}','{{ pedido.obs_entrega }}', '{{ pedido.peso }}', '{{ pedido.peso_total }}', '{{ pedido.material }}',
              '{{ pedido.peso_material }}', '{{ pedido.amarrados }}', '{{ pedido.dimencional_real }}',
@@ -329,9 +369,9 @@
             <hr/>  
             Med.:{{ pedido.dimensional }} | {{pedido.canto}}
             <hr/>
-            {% if pedido.estoque >= pedido.quantidade %}
-                <span class="status-estoque">Status: Emitindo Certificado</span>
-            {% else %}
+            {% if pedido.estoque >= pedido.quantidade %} 
+                <span class="status-estoque">Status: Emitindo Certificado</span> 
+            {% else %} 
             <p style="color: red; background-color: #ccc;">
                 <span>Status: Sem Estoque Suficiente</span></p>
             {% endif %}
@@ -352,7 +392,7 @@
                 Código | Data Ent | Estoque<br></b><hr/> 
             {% for pedido in pedidos %}
             {% if pedido.Status == 'Expedindo' %}
-            <div class="card" data-pedido-id="{{ pedido.id }}" ondblclick="showDetails('{{ pedido.data_entrega }}', '{{ pedido.dimensional }}',
+            <div class="card" data-pedido-id="{{ pedido.id }}" data-estoque="{{ pedido.estoque }}" data-quantidade="{{ pedido.quantidade }}" ondblclick="showDetails('{{ pedido.data_entrega }}', '{{ pedido.dimensional }}',
            '{{ pedido.descricao }}', '{{ pedido.cliente }}', '{{ pedido.quantidade }}', '{{ pedido.codigo }}',
             '{{ pedido.pedido }}', '{{ pedido.Status }}','{{ pedido.obs_entrega }}', '{{ pedido.peso }}', '{{ pedido.peso_total }}', '{{ pedido.material }}',
              '{{ pedido.peso_material }}', '{{ pedido.amarrados }}', '{{ pedido.dimencional_real }}',
@@ -364,14 +404,15 @@
             <hr/> 
             Med.:{{ pedido.dimensional }} | {{pedido.canto}}
             <hr/>
-            {% if pedido.estoque >= pedido.quantidade %}
-                <span class="status-estoque">Status: Disponível Para Faturar</span>
-            {% else %}
+            {% if pedido.estoque >= pedido.quantidade %} 
+                <span class="status-estoque">Status: Disponível Para Faturar</span> 
+            {% else %} 
             <p style="color: red; background-color: #ccc;">
                 <span>Status: Sem Estoque Suficiente</span></p>
             {% endif %}
-            <button class="expe-btn" data-pedido-id="{{ pedido.id }}" data-pedido-numero="{{ pedido.pedido }}" style="background-color: #a0f89d; border-radius: 5px;">Faturar X</button>
-                
+            <div class="modal-buttons">
+            <button class="expe-btn" data-pedido-id="{{ pedido.id }}" data-pedido-numero="{{ pedido.pedido }}" data-pedido-estoque="{{ pedido.estoque }}" data-pedido-quantidade="{{ pedido.quantidade }}" style="background-color: #46b342; border-radius: 5px;">Faturar X</button>
+            </div>    
         </div>
             {% endif %}
             {% endfor %}
@@ -458,6 +499,65 @@
 </div>
 </div>
 
+<!-- Modal para faturamento -->
+<div id="faturarModal" class="modal">
+    <div class="modal-content2">
+        <span class="close" onclick="closeFaturarModal()">&times;</span>
+        <h2><p style="color: rgb(0, 0, 0); background-color: #cccccc00;">Dados para processar o Faturamento do Pedido</p></h2>
+        <form id="faturarForm">
+            <input type="hidden" id="faturar-pedido-id" name="pedido_id">
+            <div class="modal-aligned">
+                    <div class="detail-field">
+                        <label for="faturado-omie">O item foi faturado pelo sistema Omie?</label>
+                        <input type="checkbox" id="faturado-omie" name="faturado_omie"><span id="omie-status">Não</span>
+                    </div>
+                    
+                    <div class="detail-field">    
+                        
+                    </div>
+                <div class="containerModal2">
+                    
+                    <div class="detail-field">
+                        <label for="peso-pedido">Peso do Pedido :</label>
+                    </div>
+                    <div class="detail-field">
+                        <label for="peso-fabricado">Peso Fabricado :</label>
+                    </div>
+                    <div class="detail-field">
+                        <label for="estoque-atual">Estoque Atual :</label>
+                    </div>
+                    <div class="detail-field">
+                        <label for="faturar-peso">Peso Faturado :</label>
+                    </div>
+                    <div class="detail-field">
+                        <label for="saldo">Saldo Futuro :</label>
+                    </div>
+                </div>
+                <div>
+                    <div class="detail-field">
+                        <input type="number" step="0.01" id="peso-pedido" name="peso_pedido" readonly class="readonly-input">
+                    </div>
+                    <div class="detail-field">
+                        <input type="number" step="0.01" id="peso-fabricado" name="peso_fabricado" readonly class="readonly-input">
+                    </div>
+                    <div class="detail-field">
+                        <input type="number" step="0.01" id="estoque-atual" name="estoque_atual" readonly class="readonly-input">
+                    </div>
+                    <div class="detail-field">
+                        <input type="number" step="0.01" id="faturar-peso" name="peso_faturado" required class="read-input">
+                    </div>
+                    <div class="detail-field">
+                        <input type="number" step="0.01" id="saldo" name="saldo" readonly class="readonly-input">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-buttons">
+                <button type="submit" style="background-color: #59b0eb;">Processar o Faturamento</button>
+                <button type="button" style="background-color: #f84444;" onclick="closeFaturarModal()">Cancelar</button>
+            </div>
+        </form>
+    </div>
+</div>
 
 <!-- JavaScript libraries -->
 <script src="//code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -500,12 +600,16 @@
         document.getElementById("myModal").style.display = "none";
     }
 
+    function closeFaturarModal() {
+        document.getElementById("faturarModal").style.display = "none";
+    }
+
     function userHasPermission(action) {
         const user = "{{ current_user.name }}";
         const permissions = {
             "Valdemir": ["move_to_pedidos", "move_to_production", "produce"],
             "Joseane": ["move_to_expedition"],
-            "Rodrigo": ["move_to_quality", "invoice"],
+            "Rodrigo Moreira": ["move_to_quality", "invoice"],
             "Diego": ["move_to_pedidos", "move_to_production", "produce", "move_to_expedition", "move_to_quality", "invoice"]
         };
 
@@ -677,14 +781,54 @@
             }
 
             var pedidoId = $(this).data('pedido-id');
-            var pedidoNumero = $(this).data('pedido-numero');
-            var faturadoOmie = confirm("O item foi faturado pelo sistema Omie?");
+            var pedidoQuantidade = $(this).data('pedido-quantidade');
+            var estoqueAtual = $(this).data('pedido-estoque'); // Pega o valor do estoque atual
+            var pesoFaturado = pedidoQuantidade; // Seta o valor padrão de peso faturado como o peso do pedido
+
+            $('#faturar-pedido-id').val(pedidoId);
+            $('#faturar-peso').val(pesoFaturado); // Define o valor do peso faturado
+            $('#peso-pedido').val(pedidoQuantidade); // Define o peso do pedido
+            $('#peso-fabricado').val(estoqueAtual); // Define o peso fabricado
+            $('#estoque-atual').val(estoqueAtual); // Define o estoque atual
+            $('#saldo').val((estoqueAtual - pesoFaturado).toFixed(2)); // Define o saldo inicial
+            $('#faturarModal').show();
+        });
+
+        $('#faturar-peso').on('input', function() {
+            var pesoFaturado = parseFloat($(this).val());
+            var estoque = parseFloat($('#estoque-atual').val());
+            var saldo = estoque - pesoFaturado;
+            $('#saldo').val(saldo.toFixed(2)); // Atualiza o saldo
+            if (saldo < 0) {
+                $('#saldo').css('color', 'red');
+            } else {
+                $('#saldo').css('color', 'black');
+            }
+        });
+
+        $('#faturado-omie').change(function() {
+            var omieStatus = $('#faturado-omie').is(':checked') ? 'Sim' : 'Não';
+            $('#omie-status').text(omieStatus);
+        });
+
+        $('#faturarForm').submit(function(e) {
+            e.preventDefault();
+
+            var pedidoId = $('#faturar-pedido-id').val();
+            var faturadoOmie = $('#faturado-omie').is(':checked');
+            var pesoFaturado = parseFloat($('#faturar-peso').val());
+            var saldo = parseFloat($('#saldo').val());
+
+            if (saldo < 0) {
+                alert("Sem saldo em estoque para faturar essa quantidade.");
+                return;
+            }
 
             $.ajax({
                 url: '/faturar_pedido',
                 type: 'POST',
                 contentType: "application/json",
-                data: JSON.stringify({ pedidoId: pedidoId, pedidoNumero: pedidoNumero, faturado_omie: faturadoOmie }),
+                data: JSON.stringify({ pedidoId: pedidoId, faturado_omie: faturadoOmie, peso_faturado: pesoFaturado }),
                 success: function(response) {
                     alert('Pedido faturado com sucesso!');
                     location.reload();
